--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ header {
   border-top-left-radius: 25px;
   border-top-right-radius: 0px;
   border-bottom-left-radius: 0px;
-  margin: 2% 2% 0% 2%;
+  margin: 1.5% 2% 0% 2%;
   overflow: hidden;
   position: relative;
   height: fit-content;
@@ -28,6 +28,7 @@ h1 {
   justify-content: center;
   color: #3787FE;
   font-size: x-large;
+  font-weight: lighter;
   position: relative;
   background: #000000;
   border: black;
@@ -67,14 +68,16 @@ h5 {
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 0px;
   border-top-left-radius: 0px;
-  margin: 0% 0% 0% 0%;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  margin: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
   overflow: hidden;
   flex: content;
-  padding-top: 1% 1% 1% 0%;
+  padding: 1% 1% 1% 0%;
   text-align: center;
   height: 100%;
   width: 100%;
@@ -92,35 +95,10 @@ footer p {
 .right {
   width:fit-content;
   white-space: nowrap;
-  margin-left: 2vw;
-  margin-right: 2vw;
+  margin-left: 3vw;
+  margin-right: 1vw;
   padding-right: 8vw;
   overflow: flex;
-}
-
-.yessir {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-top: 25px solid transparent;
-  border-left: 95px solid transparent;
-  border-radius: 25px;
-  border-bottom-left-radius: 0px;
-  border-top-right-radius: 0px;
-  padding: 1%;
-  padding-top: 100%;
-  text-align: center;
-  position: fixed;
-  bottom: 10;
-  left: 0;
-  right: 0;
-  margin-top: 2px;
-  margin-bottom: 3%;
-  position: relative;
-  margin-left: 2%;
-  margin-right: 2%;
-  color: black;
-  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
 }
 
 /* Style for individual content elements */
@@ -208,8 +186,6 @@ footer p {
   color: aqua;
   font-size: 1vh;
   background: linear-gradient(to right, rgba(9, 70, 238, 0.7) 0%, rgba(9, 70, 238, 1) 50%, rgba(9, 70, 238, 0.7) 100%);
-
-
 }
 
 
@@ -400,14 +376,15 @@ footer p {
   column-count: 4;
   margin-right: 2%;
   cursor: hand;
-  overflow: hidden;
   position: relative;
+  font-family: 'MyFont';
 }
 
 .insidebutton-nextiest {
-  height: 100%;
+  height: 70px;
   width: 100%;
-  background-color: black;
+  background: solid black;
+  position: sticky;
   position: relative;
 }
 
@@ -415,18 +392,20 @@ footer p {
   background-color: black;
   text-decoration: none;
   cursor: hand;
-  display: flex;
+  font-weight: lighter;
+  display: grid;
   flex-wrap: nowrap;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: space-around;
   margin-left: 0;
   margin-top: 0;
-  position: relative;
-  width: 110%;
+  width: 115%;
+  padding: 2%;
 }
 
 .button-nextiest p a {
-  background-color: black;
+  background: black;
   color: aqua;
   text-decoration: none;
   cursor: default;
@@ -434,9 +413,12 @@ footer p {
   flex-wrap: nowrap;
   overflow: hidden;
   max-width: 100%;
-  padding: 1.59%;
+  height: 22.4px;
   flex-basis: calc(33.33% - 10px);
-  position: relative;
+}
+
+.button-nextiest p div {
+  height: 22.4px;
 }
 
 .button-nextiest p a:hover {
@@ -488,11 +470,12 @@ footer p {
   margin-bottom: 0px;
   margin-left: 3%;
   margin-right: 3%;
-  padding-right: 3%;
+  padding: 0% 3% 0% 3%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 9em;
 }
 
 .balance-content {
@@ -516,44 +499,32 @@ footer p {
   background-color: #000000;
   border: 10px solid black transparent;
   border-radius: 25px;
-  border-left-width: 40px;
-  border-right-width: 40px;
-  min-height: 25%;
+  border-left-width: 45px;
+  border-right-width: 45px;
+  height: 25%;
   width: 40%;
   overflow: hidden;
+  white-space: nowrap;
   margin-left: 3%;
   margin-right: 3%;
   margin-bottom: 1%;
   background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
+  position: relative;
 }
 
 .row-itemer {
 background: black;
 margin: 2% 7% 2% 7%;
-height: 300px;
+height: 290px;
 border-radius: 25px;
-padding: .2%;
+padding: 1%;
+overflow: hidden;
+white-space: nowrap;
+flex-basis: calc(33.33% - 10px);
+position: relative;
 }
 
-.row-itemz {
-  background-color: #000000;
-  border: 10px solid transparent;
-  border-radius: 25px;
-  border-left-width: 40px;
-  border-right-width: 40px;
-  height: 25%;
-  width: 40%;
-  margin-left: 3%;
-  margin-right: 3%;
-  margin-bottom: 1%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 2) 50%, rgba(206, 151, 18, 0.7) 100%);
-}
-
-.row-item h3 {
+.row-item h4 {
   background: linear-gradient(to right, rgba(9, 70, 238, 0.7) 0%, rgba(9, 70, 238, 1) 50%, rgba(9, 70, 238, 0.7) 100%);
   border-radius: 20px;
   padding-left: 3%;
@@ -579,10 +550,27 @@ padding: .2%;
   border-bottom: 1px solid black;
 }
 
+.row-itemz {
+  background-color: #000000;
+  border: 10px solid transparent;
+  border-radius: 25px;
+  border-left-width: 40px;
+  border-right-width: 40px;
+  height: 25%;
+  width: 40%;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 1%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 2) 50%, rgba(206, 151, 18, 0.7) 100%);
+}
+
 @media (max-width: 876px) {
   .row-item {
     width: 100%;
-    height: 200px;
   }
 
   .balance-card {
@@ -607,4 +595,46 @@ padding: .2%;
     margin: 0 auto;
     margin-top: 1%;
   }
+}
+
+.yessir {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-top: 25px solid transparent;
+  border-left: 95px solid transparent;
+  border-radius: 25px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  text-align: center;
+  position: fixed;
+  bottom: 10;
+  left: 0;
+  right: 0;
+  margin-top: 2px;
+  margin-bottom: 3%;
+  position: relative;
+  margin-left: 2%;
+  margin-right: 2%;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
+}
+
+h3 {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background: #000000;
+  border: black;
+  height: 100%;
+  width: 100%;
+  padding-top: 100%;
+  border-top: 25px solid transparent;
+  border-left: 55px solid transparent;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  margin: 0% 0% 0% 0%;
+  color: rgba(212, 95, 16, 1);
 }
