--- a/src/components/PdfModal.css
+++ b/src/components/PdfModal.css
@@ -4,54 +4,43 @@
 }
 
 .modal-overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    z-index: 1000; /* A high z-index to ensure it's on top */
-    cursor: crosshair;
-    font-family: 'MyFont';
-  }
-  
-  /* Styles for the modal content */
-  .modal-content {
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    cursor: crosshair;
-    color: white;
-    font-family: 'MyFont';
-  }
-  
-  /* Styles for the modal inner content */
-.modal-inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    padding: 20px; /* Adjust the padding as needed */
-  }
-  
-  /* Style for the "close" button */
-  .close {
-    position: absolute;
-    top: 10px; /* Adjust the top position as needed */
-    right: 10px; /* Adjust the right position as needed */
-    font-size: 20px;
-    cursor: crosshair;
-    font-family: 'MyFont';
-  }
-  
-  /* Style for the iframe content */
-  iframe {
-    width: 100%;
-    max-width: 90vw; /* Adjust the maximum width as needed */
-    max-height: 90vh; /* Adjust the maximum height as needed */
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it appears above other content */
+}
+
+/* Styles for the modal content */
+.modal-content-centered {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 2000px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  text-align: center;
+  z-index: 9999; /* Ensure it appears above other content */
+}
+
+/* Close button styles */
+.close {
+  position: fixed;
+  top: 1%;
+  right: 1%;
+  cursor: crosshair;
+  font-size: 40px;
+  z-index: 9999;
+  font-family: 'MyFont';
+  color: white;
+}
+
+/* Styles for the full-height image */
+.full-height-image {
+  max-height: 80vh;
+  width: auto;
+}
