--- a/src/components/Transactions.css
+++ b/src/components/Transactions.css
@@ -3,20 +3,21 @@
   src: url('Sterilict-L3aen.ttf') format('truetype');
 }
 
-h3 {
+h4.tr {
   padding-left: 2%;
   padding-top: .5%;
   padding-bottom: .5%;
   background: solid black;
+  white-space: nowrap;
+  font-size: small;
 }
 
-p {
+p.t {
   padding-left: 2%;
   padding-top: .5%;
   padding-bottom: .5%;
   background: solid black;
-}
-
-.transaction-date {
-  border-bottom: 1px solid black;
+  white-space: nowrap;
+  font-size: small;
+  font-weight: bold;
 }
