--- a/src/App.css
+++ b/src/App.css
@@ -399,6 +399,7 @@ footer p {
   cursor: default;
   flex-direction: column;
   flex-wrap: nowrap;
+  white-space: nowrap;
   overflow: hidden;
   max-width: 100%;
   height: 22.4px;
