--- a/src/App.css
+++ b/src/App.css
@@ -389,7 +389,7 @@ footer p {
   margin-left: 0;
   margin-top: 0;
   width: 115%;
-  padding: 2%;
+  padding: 0% 2% 2% 2%;
 }
 
 .button-nextiest p a {
@@ -400,7 +400,6 @@ footer p {
   cursor: default;
   flex-direction: column;
   flex-wrap: nowrap;
-  white-space: nowrap;
   overflow: hidden;
   max-width: 100%;
   height: 22.4px;
@@ -408,7 +407,17 @@ footer p {
 }
 
 .button-nextiest p div {
+  background: black;
+  color: aqua;
+  text-decoration: none;
+  font-size: small;
+  cursor: default;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  max-width: 100%;
   height: 22.4px;
+  flex-basis: calc(33.33% - 10px);
 }
 
 .button-nextiest p a:hover {
