--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,7 +13,7 @@
   .auth-container {
     display: flex;
     align-items: center;
-    padding-left: 2%;
+    padding-left: 5%;
   }
   
   .user {
@@ -24,7 +24,7 @@
     font-size: .7rem;
     font-family: 'MyFont';
     font-weight: bold;
-    width: 90px;
+    width: 85px;
     margin: 5px;
     color: inherit;
     text-decoration: inherit;
@@ -36,7 +36,7 @@
 
   .user:hover {
     cursor: default;
-    opacity: 0.6;
+    opacity: .6;
   }
   
   .auth-button {
@@ -47,7 +47,7 @@
     font-size: .7rem;
     font-family: 'MyFont';
     font-weight: bold;
-    width: 90px;
+    width: 85px;
     margin: 5px;
     color: inherit;
     text-decoration: inherit;
@@ -57,4 +57,20 @@
   .auth-button:hover {
     cursor: default;
     opacity: 0.6;
+  }
+
+  @keyframes shake {
+    0%, 100% {
+      transform: translate(0, 0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: translate(-10px, -10px);
+    }
+    20%, 40%, 60%, 80% {
+      transform: translate(10px, 10px);
+    }
+  }
+
+  .shake {
+    animation: shake .5s cubic-bezier(0.25, 0.46, 0.45, 4) infinite;
   }
